answer생성 알고리즘최적화